--- a/ExtendedAudioFileConvertTest/Base.lproj/Main.storyboard
+++ b/ExtendedAudioFileConvertTest/Base.lproj/Main.storyboard
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11198.2" systemVersion="16A296" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cbL-lR-btD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cbL-lR-btD">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,43 +23,52 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="aF1-BC-cSb">
+                                <rect key="frame" x="16" y="72" width="343" height="390.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="Audio File Format Information" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="x6G-Yl-JZx">
+                                        <rect key="frame" x="76.5" y="0.0" width="190.5" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Source Audio File:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mWg-K2-Gqo">
+                                        <rect key="frame" x="117" y="25" width="109.5" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qos-um-5fQ">
+                                        <rect key="frame" x="169.5" y="49" width="4" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="Source Format:" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="fJL-kw-Z0w">
+                                        <rect key="frame" x="122" y="73" width="99.5" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tpg-VJ-dgY">
+                                        <rect key="frame" x="169.5" y="98" width="4" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="Select the format and sample rate for output.caf file." lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="AiT-pK-uEi">
+                                        <rect key="frame" x="23" y="123" width="297" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="Output Encoding Format:" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="YOY-2S-MI6">
+                                        <rect key="frame" x="100.5" y="145.5" width="142.5" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <segmentedControl opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="r1q-UN-WN1">
+                                        <rect key="frame" x="42" y="168" width="259" height="29"/>
                                         <segments>
                                             <segment title="AAC"/>
                                             <segment title="IMA"/>
@@ -69,11 +81,13 @@
                                         </connections>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="Output Sample Rate:" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="tHE-D7-JEH">
+                                        <rect key="frame" x="113" y="204" width="117.5" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <segmentedControl opaque="NO" clearsContextBeforeDrawing="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="3" translatesAutoresizingMaskIntoConstraints="NO" id="IWd-Xh-gtK">
+                                        <rect key="frame" x="56" y="226.5" width="231" height="29"/>
                                         <segments>
                                             <segment title="44.1k"/>
                                             <segment title="22k"/>
@@ -85,26 +99,31 @@
                                         </connections>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Destination Audio File:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GpJ-03-y5U">
+                                        <rect key="frame" x="104" y="262.5" width="135.5" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ej-v3-tJz">
+                                        <rect key="frame" x="169.5" y="286.5" width="4" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="Destination Format:" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="AZ5-No-DmV">
+                                        <rect key="frame" x="108" y="310.5" width="127" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Es-k7-XU8">
+                                        <rect key="frame" x="169.5" y="335.5" width="4" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOU-dj-hVE">
+                                        <rect key="frame" x="106.5" y="360.5" width="130" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <state key="normal" title="Convert &amp; Play File"/>
                                         <state key="disabled">
@@ -117,8 +136,8 @@
                                             <action selector="userDidPressConvertAndPlayButton:" destination="9kq-3M-rVx" eventType="touchUpInside" id="sGq-kE-0bG"/>
                                         </connections>
                                     </button>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2AY-sH-CcE">
-                                        <frame key="frameInset" minX="129" minY="392" width="86"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2AY-sH-CcE">
+                                        <rect key="frame" x="128.5" y="390.5" width="86" height="0.0"/>
                                         <state key="normal" title="Stop Playing"/>
                                         <connections>
                                             <action selector="userDidPressStopPlayingButton:" destination="9kq-3M-rVx" eventType="touchUpInside" id="eIT-u9-4UW"/>
@@ -126,13 +145,32 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xnc-58-1K0">
+                                <rect key="frame" x="57" y="535" width="261" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="261" id="EKl-w8-fpI"/>
+                                    <constraint firstAttribute="height" constant="50" id="keg-4l-K4g"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="0.33"/>
+                                    <segment title="0.5"/>
+                                    <segment title="1.0"/>
+                                    <segment title="2.0"/>
+                                    <segment title="3.0"/>
+                                </segments>
+                                <connections>
+                                    <action selector="selectRate:" destination="9kq-3M-rVx" eventType="valueChanged" id="oAb-Eh-EXY"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="aF1-BC-cSb" secondAttribute="bottom" id="1xz-pC-Qzh"/>
                             <constraint firstItem="aF1-BC-cSb" firstAttribute="trailing" secondItem="eSU-T8-LV4" secondAttribute="trailingMargin" id="FxZ-0f-dGC"/>
+                            <constraint firstItem="xnc-58-1K0" firstAttribute="centerX" secondItem="eSU-T8-LV4" secondAttribute="centerX" id="OJj-oF-1a7"/>
                             <constraint firstItem="aF1-BC-cSb" firstAttribute="leading" secondItem="eSU-T8-LV4" secondAttribute="leadingMargin" id="PQm-oa-p1y"/>
                             <constraint firstItem="aF1-BC-cSb" firstAttribute="top" secondItem="Z4w-Bb-XTl" secondAttribute="bottom" constant="8" symbolic="YES" id="h89-5T-WuW"/>
+                            <constraint firstItem="rba-hM-Cuo" firstAttribute="top" secondItem="xnc-58-1K0" secondAttribute="bottom" constant="82" id="pXQ-g9-dMY"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="ExtAudioFile Convert" id="oVH-ct-zYn"/>
@@ -149,7 +187,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wHF-fT-uid" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="252" y="238"/>
+            <point key="canvasLocation" x="252" y="237.93103448275863"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XH0-0M-rX1">
@@ -157,7 +195,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cbL-lR-btD" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="oJX-eb-39c">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
